Updated faq (no message)

--- a/faq.txt
+++ b/faq.txt
@@ -213,7 +213,7 @@ Yes, you can read those! A lot of new people think they're not supposed to be re
 
 **In-character, what is the SCP Foundation?** 
 
-We are the last bastion of security in a world where natural laws rapidly break down. We are here to protect humanity from the things that go bump in the night, from people who wield power beyond mortal understanding. We are here to make the world a safer place. We are the holders of wonders, and the crafters of dreams. We are why the world continues.
+We are the last bastion of security in a world where natural laws rapidly break down. We are here to protect humanity from the things that go bump in the night, from people who wield power beyond mortal understanding. We are here to make the world a safer place. We are the holders of wonders, and the caretakers of dreams. We are why the world continues.
 
 See also [[[About The SCP Foundation]]].
 
