Updated news (no message)

--- a/news.txt
+++ b/news.txt
@@ -11,7 +11,7 @@ title:Site News Hub
 
 ------
 
-[[module Listpages name="news-09-2018"]]
+[[module Listpages name="news-10-2018"]]
 [[=]]
 + %%title%%
 [[/=]]
@@ -20,6 +20,7 @@ title:Site News Hub
 
 ------
 ------
+**[[[news-10-2018|News for October 2018]]]**
 **[[[news-09-2018|News for September 2018]]]**
 **[[[news-08-2018|News for August 2018]]]**
 **[[[news-07-2018|News for July 2018]]]**
